--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ body {
 }
 
 .task-box {
-  @apply bg-white w-full rounded-[1.5rem] p-5 shadow-sm flex gap-8; 
+  @apply bg-white w-full rounded-[1.5rem] p-5 shadow-sm flex gap-8 overflow-hidden; 
 }
 
 .task-card {
@@ -138,15 +138,15 @@ body {
 }
 
 .list-item-box {
-  @apply w-[240px] bg-[#f6f6f8] rounded-[1rem] shadow-md cursor-pointer;
+  @apply bg-[#f6f6f8] mb-1 rounded-[1rem] shadow-md cursor-pointer;
 }
 
 .list-item-box h1 {
-  @apply text-copyrightBlue text-[1.1rem]
+  @apply text-copyrightBlue text-[1rem] h-[50px];
 }
 
 .list-item-box p {
-  @apply text-[0.8rem] text-[#bababf];
+  @apply text-[0.8rem] text-[#6f6f72] h-[60px];
 }
 
 .list-item-box img {
@@ -205,3 +205,8 @@ body {
 .auth-form-box input {
   @apply text-primaryBlue h-[40px] !outline-none placeholder-[#777777] w-full text-[0.85rem];
 }
+
+.slick-slide > div {
+  margin: 0 10px;
+}
+
