completed profile and account details update

--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ body {
 }
 
 .task-body h6 {
-  @apply text-[0.7rem] text-[#0582ff] border border-[#0582ff] px-3 py-[2px] rounded-lg
+  @apply text-[0.7rem] px-3 py-[2px] rounded-lg
 }
 
 .task-box {
@@ -122,7 +122,7 @@ body {
 }
 
 .task-card {
-  @apply bg-white w-[520px] rounded-[1.5rem] pl-4 pb-4 shadow-sm flex justify-center cursor-pointer items-center gap-5 mb-4; 
+  @apply bg-white w-[520px] rounded-[1.5rem] pl-4 pr-2 pb-4 shadow-sm flex justify-start cursor-pointer items-center gap-5 mb-4; 
 }
 
 .task-card img {
@@ -130,7 +130,7 @@ body {
 }
 
 .task-card h1 {
-  @apply text-copyrightBlue text-[1rem]
+  @apply text-copyrightBlue text-[0.9rem]
 }
 
 .task-card p {
@@ -210,3 +210,18 @@ body {
   margin: 0 10px;
 }
 
+.table-col-task {
+  @apply px-6 py-2 text-[0.70rem] font-[400];
+}
+
+.profile-field-row {
+  @apply flex justify-start px-[1.5rem] gap-x-5 items-center;
+}
+
+.profile-input-style {
+  @apply w-[350px] text-primaryBlue placeholder-[#a6a6a6] outline outline-[#e4e4e4] rounded-[0.7rem] p-3 text-[0.87rem];
+}
+
+.profile-label-style {
+  @apply text-[0.83rem] mt-2 mb-1 ml-2 text-[#a7a7a7];
+}
